hlf-ord/tmp/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o0--vs
  namespace: n0
spec:
  hosts:
  - orderer0.org0.com
  - o0-hlf-ord
#  gateways:
#    -  o0-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
        - orderer0.org0.com
        - o0-hlf-ord
    route:
    - destination:
        host: o0-hlf-ord.n0.svc.cluster.local
        port:
          number: 7050
  http:
  - match:
    - port: 8443
    route:
    - destination:
        host: o0-hlf-ord.n0.svc.cluster.local
        port:
          number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o1--vs
  namespace: n0
spec:
  hosts:
    - orderer1.org0.com
    - o1-hlf-ord
#  gateways:
#    -  o1-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer1.org0.com
            - o1-hlf-ord
      route:
        - destination:
            host: o1-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 8443
      route:
        - destination:
            host: o1-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o2--vs
  namespace: n0
spec:
  hosts:
    - orderer2.org0.com
    - o2-hlf-ord
#  gateways:
#    -  o2-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer2.org0.com
            - o2-hlf-ord
      route:
        - destination:
            host: o2-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 8443
      route:
        - destination:
            host: o2-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o3--vs
  namespace: n0
spec:
  hosts:
    - orderer3.org0.com
    - o3-hlf-ord
#  gateways:
#    -  o3-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer3.org0.com
            - o3-hlf-ord
      route:
        - destination:
            host: o3-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 8443
      route:
        - destination:
            host: o3-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: o4--vs
  namespace: n0
spec:
  hosts:
    - orderer4.org0.com
    - o4-hlf-ord
#  gateways:
#    -  o4-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - orderer4.org0.com
            - o4-hlf-ord
      route:
        - destination:
            host: o4-hlf-ord.n0.svc.cluster.local
            port:
              number: 7050
  http:
    - match:
        - port: 8443
      route:
        - destination:
            host: o4-hlf-ord.n0.svc.cluster.local
            port:
              number: 8443
---
